--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -55,7 +55,7 @@
                     In 2008 something happened that marked my life forever. I left university and also the family business. At that moment I learned that <b>in life there are ups and downs</b>. I spent a couple of years working as a <b>salesperson</b> in stores which taught me <b>how to deal with the public, be friendly and develop humility.</b><br></br>
                     In 2016 I worked as a <b>manager</b> in a design store, where <b>I learned a lot about graphic design, fashion design, artistic composition and took some marketing and visual merchandising courses</b>.<br></br>
                     Right at that moment it was a time of great crisis in my native country Venezuela, inflation reached 1,370,000% according to the estimates of the International Monetary Fund (IMF), it is something difficult to believe but it happened and I lived it. <b>I learned to work under a lot of pressure</b>, every week I had to change product prices 3 or more times a day. I remember going to the movies with my mother and watching the price of popcorn change while we stood in line.<br></br>
-                    
+                    I am a person who (like anyone) feels love for the place where I was born. In 2019 I learned to have <b>resilience, accept changes and that the strength of Faith is focused on our actions and the confidence to let ourselves be guided by God</b>. (with many tears in my eyes) I emigrated from my country to Panama. I arrived with all my capital (20 dollars) and a great desire to improve my living situation.<br></br>
 
                 </p>
             </div>
